[package]
name = "pi_atom"
version = "0.2.6"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "The global thread safe atomic string pool reduces the memory occupation of the same string and is also used for HashMap keys"
repository = "https://github.com/GaiaWorld/pi_atom"
license = "MIT OR Apache-2.0"
keywords = ["pi",  "atom"]


[dependencies]
fnv = "1.0.6"
lazy_static = "1.4"
pi_bon = "0.2"
pi_share = "=0.4.11"
pi_hash = "0.1"
fxhash = "0.2.1"
twox-hash = "1"

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = true

[features]
pointer_width_32 = []
